# DL_train_server_frame

./: .gitignore  pyproject.toml
src/: ds_config.json  train.py
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt  train.sh
