[project]
name = "my_ml_project"
version = "0.1.0"
description = "A machine learning project with training, testing, and service API"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "scikit-learn>=1.3",
    "pandas>=2.1",
    "numpy>=1.26"
]

[project.scripts]
start-api = "src.service:run"
